--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
         </div>
 
         <div class = "collapse" id="collaspeCheatMode">
-            <div class="card card-body">
-                <div class = "row">
-                    <button class="btn btn-success btn-lg" id="resume" type ="button">Resume</button>
-                    <button class="btn btn-warning btn-lg" id="pause" type ="button">Pause</button>
-                    <button class="btn btn-danger btn-lg" id="reset-timer" type ="button">Reset Timer</button>
-                </div>
+            <div class="card-body">
+                <button class="btn btn-success btn-lg" id="resume" type ="button">Resume</button>
+                <button class="btn btn-warning btn-lg" id="pause" type ="button">Pause</button>
+                <button class="btn btn-danger btn-lg" id="reset-timer" type ="button">Reset Timer</button>
             </div>
         </div>
     </div>
@@ -71,7 +69,7 @@
                 <div class="card-body">
                     <h5 class="card-title">What is the world's busiest airport by passenger traffic as of 2017?</h5>
                     <form action="">
-                        <input class = "radio-button" name="q1" type="radio" id = "q1" value="Beijing Capitial Interational Aiport"> Beijing Capitial Interational Aiport<br>
+                        <input class = "radio-button" name="q1" type="radio" id = "q1" value="Beijing Capitial International Aiport"> Beijing Capitial International Aiport<br>
                         <input class = "radio-button" name="q1" type="radio" id = "q1" value="Hartsfield-Jackson Atlanta International Airport"> Hartsfield-Jackson Atlanta International Airport<br>
                         <input class = "radio-button" name="q1" type="radio" id = "q1" value="Dubai International Airport"> Dubai International Airport<br>
                     </form>
@@ -149,8 +147,8 @@
 
     <div class = "submit-container">
         <div class = "submit button">
-        <button type="button" class="btn btn-primary btn-lg">Submit</button>
-        <button type="button" class="btn btn-danger btn-lg">Reset</button>
+        <button class="btn btn-primary btn-lg" type="button" id = "submit">Submit</button>
+        <button class="btn btn-danger btn-lg" type="button" id = "reset">Reset</button>
         </div>
     </div>
 
