--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- Reset CSS link-->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -60,7 +63,6 @@
         <button class="btn btn-primary btn-lg" id="start" type ="button">Start</button>
     </div>
 
-
     <div class = "questions-container">
         <div class = "questions">
 
@@ -69,9 +71,12 @@
                 <div class="card-body">
                     <h5 class="card-title">What is the world's busiest airport by passenger traffic as of 2017?</h5>
                     <form action="">
-                        <input class = "radio-button" name="q1" type="radio" id = "q1" value="Beijing Capitial International Aiport"> Beijing Capitial International Aiport<br>
-                        <input class = "radio-button" name="q1" type="radio" id = "q1" value="Hartsfield-Jackson Atlanta International Airport"> Hartsfield-Jackson Atlanta International Airport<br>
-                        <input class = "radio-button" name="q1" type="radio" id = "q1" value="Dubai International Airport"> Dubai International Airport<br>
+                        <input class = "radio-button" name="q1" type="radio" value="Beijing Capitial International Aiport"> Beijing Capitial International Aiport<br>
+                        <input class = "radio-button" name="q1" type="radio" value="Dubai International Airport"> Dubai International Airport<br>
+                        <input class = "radio-button" name="q1" type="radio" value="Hartsfield-Jackson Atlanta International Airport"> Hartsfield-Jackson Atlanta International Airport <br>
+                        <input class = "radio-button" name="q1" type="radio" value="Los Angeles International Airport"> Los Angeles International Airport<br>
+                        <input class = "radio-button" name="q1" type="radio" value="Tokyo Haneda International Airport"> Tokyo Haneda International Airport<br>
+
                     </form>
                     <br>
                     <h6 id = "card-selected-q1"></h6>
@@ -84,9 +89,11 @@
                 <div class="card-body">
                     <h5 class="card-title">What is the largest passenger aircraft currently in operation as of 2018?</h5>
                     <form action="">
-                        <input class = "radio-button" name="q2" type="radio" value="Boeing 777-300"> Boeing 777-300<br>
-                        <input class = "radio-button" name="q2" type="radio" value="Boeing 747-8"> Boeing 747-8<br>
+                        <input class = "radio-button" name="q2" type="radio" value="Airbus Airbus A350-1000"> Airbus A350-1000<br>
                         <input class = "radio-button" name="q2" type="radio" value="Airbus A380-800"> Airbus A380-800<br>
+                        <input class = "radio-button" name="q2" type="radio" value="Boeing 747-8"> Boeing 747-8<br>
+                        <input class = "radio-button" name="q2" type="radio" value="Boeing 777-300"> Boeing 777-300<br>                     
+                        <input class = "radio-button" name="q2" type="radio" value="Boeing 787-800"> Boeing 787-800<br>
                     </form>
                     <br>
                     <h6 id = "card-selected-q2"></h6>
@@ -100,8 +107,10 @@
                     <h5 class="card-title">Which airport operates at the highest altitude as of 2018?</h5>
                     <form action="">
                         <input class = "radio-button" name="q3" type="radio" value="Daocheng Yading Airport"> Daocheng Yading Airport<br>
-                        <input class = "radio-button" name="q3" type="radio" value="Qamdo Bamda Airport"> Qamdo Bamda Airport<br>
+                        <input class = "radio-button" name="q3" type="radio" value="El Alto International Airport"> El Alto International Airport<br>
                         <input class = "radio-button" name="q3" type="radio" value="Kangding Airport"> Kangding Airport<br>
+                        <input class = "radio-button" name="q3" type="radio" value="Ngari Gunsa Airport"> Ngari Gunsa Airport<br>
+                        <input class = "radio-button" name="q3" type="radio" value="Qamdo Bamda Airport"> Qamdo Bamda Airport<br>
                     </form>
                     <br>
                     <h6 id = "card-selected-q3"></h6>
@@ -109,13 +118,14 @@
                 </div>
             </div>
 
-
             <div class="card">
                 <h5 class="card-header">Question 4</h5>
                 <div class="card-body">
                     <h5 class="card-title">What is the longest active non-stop flight in the world as of spring 2018?</h5>
                     <form action="">
                         <input class = "radio-button" name="q4" type="radio" value="Auckland to Doha"> Auckland to Doha<br>
+                        <input class = "radio-button" name="q4" type="radio" value="Auckland to Dubai"> Auckland to Dubai<br>                        
+                        <input class = "radio-button" name="q4" type="radio" value="Auckland to Doha"> Houston to Sydney<br>
                         <input class = "radio-button" name="q4" type="radio" value="Perth to London"> Perth to London<br>
                         <input class = "radio-button" name="q4" type="radio" value="Singapore to Los Angeles"> Singapore to Los Angeles<br>
                     </form>
@@ -131,9 +141,11 @@
                 <div class="card-body">
                     <h5 class="card-title">Which airport won Skytrax's "Best Airport in the World" award in 2018?</h5>
                     <form action="">
-                        <input class = "radio-button" name="q5" type="radio" value="Incheon International Airport"> Incheon International Airport<br>
+                        <input class = "radio-button" name="q5" type="radio" value="Doha Hamad  International Airport"> Doha Hamad International Airport<br>
+                        <input class = "radio-button" name="q5" type="radio" value="Hong Kong Chek Lap Kok International Airport"> Hong Kong Chek Lap Kok International Airport<br>
+                        <input class = "radio-button" name="q5" type="radio" value="London Heathrow International Airport"> London Heathrow International Airport<br>
+                        <input class = "radio-button" name="q5" type="radio" value="Seoul Incheon International Airport"> Seoul Incheon International Airport<br>
                         <input class = "radio-button" name="q5" type="radio" value="Singapore Changi International Airport"> Singapore Changi International Airport<br>
-                        <input class = "radio-button" name="q5" type="radio" value="Hong Kong International Airport"> Hong Kong International Airport<br>
                     </form>
                     <br>
                     <h6 id = "card-selected-q5"></h6>
