--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <!-- Reset CSS link-->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!-- CSS link-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Javascript link -->
     <script src="assets/javascript/app.js"></script>
@@ -67,9 +67,9 @@
         <div class = "questions">
 
             <div class="card">
-                <h5 class="card-header">Question 1</h5>
+                <h5 class="card-header" id= "card-header1" data-value = "Question 1">Question 1</h5> 
                 <div class="card-body">
-                    <h5 class="card-title">What is the world's busiest airport by passenger traffic as of 2017?</h5>
+                    <h5 class="card-title">What is the world's busiest airport by passenger traffic as of 2017? </h5>
                     <form action="">
                         <input class = "radio-button" name="q1" type="radio" value="Beijing Capitial International Aiport"> Beijing Capitial International Aiport<br>
                         <input class = "radio-button" name="q1" type="radio" value="Dubai International Airport"> Dubai International Airport<br>
@@ -85,7 +85,7 @@
             </div>
 
             <div class="card">
-                <h5 class="card-header">Question 2</h5>
+                <h5 class="card-header" id= "card-header2" data-value = "Question 1">Question 2</h5>
                 <div class="card-body">
                     <h5 class="card-title">What is the largest passenger aircraft currently in operation as of 2018?</h5>
                     <form action="">
@@ -102,7 +102,7 @@
             </div>
 
             <div class="card">
-                <h5 class="card-header">Question 3</h5>
+                <h5 class="card-header" id= "card-header3" data-value = "Question 1">Question 3</h5>
                 <div class="card-body">
                     <h5 class="card-title">Which airport operates at the highest altitude as of 2018?</h5>
                     <form action="">
@@ -119,9 +119,9 @@
             </div>
 
             <div class="card">
-                <h5 class="card-header">Question 4</h5>
+                <h5 class="card-header" id= "card-header4" data-value = "Question 1">Question 4</h5>
                 <div class="card-body">
-                    <h5 class="card-title">What is the longest active non-stop flight in the world as of spring 2018?</h5>
+                    <h5 class="card-title">What is the longest active non-stop flight in the world as of Spring 2018?</h5>
                     <form action="">
                         <input class = "radio-button" name="q4" type="radio" value="Auckland to Doha"> Auckland to Doha<br>
                         <input class = "radio-button" name="q4" type="radio" value="Auckland to Dubai"> Auckland to Dubai<br>                        
@@ -137,7 +137,7 @@
 
 
             <div class="card">
-                <h5 class="card-header">Question 5</h5>
+                <h5 class="card-header" id= "card-header5" data-value = "Question 1">Question 5</h5>
                 <div class="card-body">
                     <h5 class="card-title">Which airport won Skytrax's "Best Airport in the World" award in 2018?</h5>
                     <form action="">
@@ -166,9 +166,7 @@
 
     </div>
 
-
-
-   
+ 
 
 <!-- Bootstrap jquery -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
