--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <div class="card">
                 <h5 class="card-header" id= "card-header10" data-value = "Question 10">Question 10</h5>
                 <div class="card-body">
-                    <h5 class="card-title">Which US airport experienced the most weather related delays and departures in 2017?</h5>
+                    <h5 class="card-title">Which US airport experienced the most weather-related delays and delayed departures in 2017?</h5>
                     <form action="">
                         <input class = "radio-button" name="q10" type="radio" value="Chicago O’Hare International Airport"> Hartsfield-Jackson Atlanta International Airport<br>
                         <input class = "radio-button" name="q10" type="radio" value="John F. Kennedy International Airport"> John F. Kennedy International Airport<br>
