--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class = "main-container">
 
     <div class = "header">
-        <h1>Trivia Game</h1>
+        <h1><i class="fas fa-plane-departure"></i> Trivia Game <i class="fas fa-plane-arrival"></i></h1>
     </div>
 
     <div class = "instructions-container">
@@ -65,7 +65,7 @@
         <div id = "timer"><h2>60 seconds left</h2></div>
     </div>
 
-    <!--Self-note: Not DRY! The following section can be potentially simplified with arrays {Q1: [Index, Question, Answer, option1,2,3,4,5, source]  then cycled through a for loop to create class and attribute assignments. Can also potentially randomize the questions so it is not fixed each time.-->
+    <!--Self-note: Not DRY! The following section can be potentially simplified with arrays {Q1: [Index, Question, Answer, option1,2,3,4,5, source] } then cycled through a for loop to create class and attribute assignments. Can also potentially randomize the questions so it is not fixed each time.-->
     <div class = "questions-container">
         <div class = "questions">
 
