--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <div class="collapse" id="collapseInstructions">
             <div class="card card-body">
                 You will have 60 seconds to answer the 10 presented questions. When you click on the "Start" button below, the countdown will begin and all questions will be presented. <br>
-                At the end of 60 seconds, the correct answers and your score will be presented to you.<br>
-                If you finish answering all questions before 60 seconds has elapsed, you may also click the "Submit" button at the bottom.<br>
+                After 60 seconds, the correct answers along with sources and your score total  will be presented to you.<br>
+                If you complete all questions before 60 seconds has elapsed, you may also click the "Submit" button at the bottom.<br>
                 Good Luck.
             </div>
         </div>
@@ -74,7 +74,7 @@
                 <div class="card-body">
                     <h5 class="card-title">What is the world's busiest airport by passenger traffic as of 2017? </h5>
                     <form action="">
-                        <input class = "radio-button" name="q1" type="radio" value="Beijing Capitial International Aiport"> Beijing Capitial International Aiport<br>
+                        <input class = "radio-button" name="q1" type="radio" value="Beijing Capital International Airport"> Beijing Capital International Airport<br>
                         <input class = "radio-button" name="q1" type="radio" value="Dubai International Airport"> Dubai International Airport<br>
                         <input class = "radio-button" name="q1" type="radio" value="Hartsfield-Jackson Atlanta International Airport"> Hartsfield-Jackson Atlanta International Airport <br>
                         <input class = "radio-button" name="q1" type="radio" value="Los Angeles International Airport"> Los Angeles International Airport<br>
