--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div id = "timer"><h2>60 seconds left</h2></div>
     </div>
 
-    <!--Self-note: Not DRY! The following section can be potentially simplified with arrays {Q1: [Index, Question, Answer, option1,2,3,4,5, source] } then cycled through a for loop to create class and attribute assignments. Can also potentially randomize the questions so it is not fixed each time.-->
+    <!--Self-note: Not DRY! The following section can be potentially simplified with arrays {Q1: [Index, Question, [option1,2,3,4,5], source, Answer] } then cycled through a for loop to create class and attribute assignments. Can also potentially randomize the questions so it is not fixed each time.-->
     <div class = "questions-container">
         <div class = "questions">
 
